tests/ui/traits/next-solver/normalize/normalize-param-env-2.stderr
error[E0275]: overflow evaluating the requirement `<() as A<T>>::Assoc == _`
  --> $DIR/normalize-param-env-2.rs:22:5
   |
LL | /     fn f()
LL | |     where
LL | |         Self::Assoc: A<T>,
   | |__________________________^

error[E0275]: overflow evaluating the requirement `<() as A<T>>::Assoc == _`
  --> $DIR/normalize-param-env-2.rs:24:22
   |
LL |         Self::Assoc: A<T>,
   |                      ^^^^

error[E0283]: type annotations needed
  --> $DIR/normalize-param-env-2.rs:24:22
   |
LL |         Self::Assoc: A<T>,
   |                      ^^^^ cannot infer type
   |
note: multiple `impl`s or `where` clauses satisfying `_: A<T>` found
  --> $DIR/normalize-param-env-2.rs:19:1
   |
LL | impl<T> A<T> for () {
   | ^^^^^^^^^^^^^^^^^^^
...
LL |         Self::Assoc: A<T>,
   |                      ^^^^
note: the requirement `_: A<T>` appears on the `impl`'s associated function `f` but not on the corresponding trait's associated function
  --> $DIR/normalize-param-env-2.rs:12:8
   |
LL | trait A<T> {
   |       - in this trait
...
LL |     fn f()
   |        ^ this trait's associated function doesn't have the requirement `_: A<T>`

error[E0275]: overflow evaluating the requirement `<() as A<T>>::Assoc == _`
  --> $DIR/normalize-param-env-2.rs:22:5
   |
LL | /     fn f()
LL | |     where
LL | |         Self::Assoc: A<T>,
   | |__________________________^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0275]: overflow evaluating the requirement `<() as A<T>>::Assoc == _`
  --> $DIR/normalize-param-env-2.rs:22:5
   |
LL | /     fn f()
LL | |     where
LL | |         Self::Assoc: A<T>,
   | |__________________________^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0275]: overflow evaluating the requirement `<() as A<T>>::Assoc: A<T>`
  --> $DIR/normalize-param-env-2.rs:24:22
   |
LL |         Self::Assoc: A<T>,
   |                      ^^^^

error[E0275]: overflow evaluating whether `<() as A<T>>::Assoc` is well-formed
  --> $DIR/normalize-param-env-2.rs:24:22
   |
LL |         Self::Assoc: A<T>,
   |                      ^^^^

error[E0275]: overflow evaluating the requirement `(): A<T>`
  --> $DIR/normalize-param-env-2.rs:27:10
   |
LL |         <() as A<T>>::f();
   |          ^^

error[E0275]: overflow evaluating the requirement `<() as A<T>>::Assoc == _`
  --> $DIR/normalize-param-env-2.rs:27:9
   |
LL |         <() as A<T>>::f();
   |         ^^^^^^^^^^^^^^^^^

error[E0283]: type annotations needed
  --> $DIR/normalize-param-env-2.rs:27:9
   |
LL |         <() as A<T>>::f();
   |         ^^^^^^^^^^^^^^^^^ cannot infer type
   |
note: multiple `impl`s or `where` clauses satisfying `_: A<T>` found
  --> $DIR/normalize-param-env-2.rs:19:1
   |
LL | impl<T> A<T> for () {
   | ^^^^^^^^^^^^^^^^^^^
...
LL |         Self::Assoc: A<T>,
   |                      ^^^^
note: required by a bound in `A::f`
  --> $DIR/normalize-param-env-2.rs:14:22
   |
LL |     fn f()
   |        - required by a bound in this associated function
LL |     where
LL |         Self::Assoc: A<T>,
   |                      ^^^^ required by this bound in `A::f`

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0275, E0283.
For more information about an error, try `rustc --explain E0275`.
